--- a/catBooks/angular.json
+++ b/catBooks/angular.json
@@ -7,7 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "inlineTemplate": true
+          "inlineTemplate": false
         },
         "@schematics/angular:application": {
           "strict": true
